--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, max-snippet:50, max-image-preview:large" />
     <title>Luca de Acha</title>
   </head>
   <body id="body">
     <canvas id="bg"></canvas>
+    <div class="loading"><h1>Loading</h1></div>
     <main>
 
       <header>
@@ -87,7 +88,7 @@
 
 
       <section class="light">
-        <h2>🏆 Accomplishments</h2>
+        <h2>🏆 Courses</h2>
 
         <ul>
           <li>
