Adding this portfolio to projects

--- a/index.html
+++ b/index.html
@@ -31,7 +31,18 @@
       <section class="light">
         <h2>🐱‍👤 Projects</h2>
 
-        <h3>Instaclone Tnav-e</h3>
+        <h2>This portfolio!</h2>
+        <p>
+          A Vite/ThreeJS project
+        </p>
+        <p><a href="https://github.com/T-NAVe/instaclonetnave" target="_blank" rel="noopener noreferrer">The GitHub repository</a></p>
+        <p>
+          This was a very interesting yet simple project to make. <br>
+          The intention behind this project was more on the funside, feel free to use this code as you like, hope you enjoy it. <br>
+        </p>
+        <hr>
+
+        <h2>Instaclone Tnav-e</h2>
         <p>
           A MERN Stack Instagram clone
         </p>
