Making the project responsive and finxing things

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <p>
           A Vite/ThreeJS project
         </p>
-        <p><a href="https://github.com/T-NAVe/instaclonetnave" target="_blank" rel="noopener noreferrer">The GitHub repository</a></p>
+        <p><a href="https://github.com/T-NAVe/Portfolio" target="_blank" rel="noopener noreferrer">The GitHub repository</a></p>
         <p>
           This was a very interesting yet simple project to make. <br>
           The intention behind this project was more on the funside, feel free to use this code as you like, hope you enjoy it. <br>
