Added linkedin icon and link

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <p>
           I'm a self-taught full-stack developer looking to insert myself into the IT bussines, with the objective to obtain new knowledge, to improve the ones i already have and to contribute with the company success.
         </p>
+        <a href="https://www.linkedin.com/in/luca-de-acha/" target="_blank" rel="noopener noreferrer" >
+          <img class="icon" src="linkedin.svg">
+        </a>
       </section>
 
       <section class="light">
@@ -91,10 +94,10 @@
           I've to wait for the new version to arrive in order to make the app work again <br>
           But hey, here are some screenshots!
         </p>
-        <img src="screenshot.jpg" alt="">
-        <img src="screenshot01.jpg" alt="">
-        <img src="screenshot02.jpg" alt="">
-        <img src="screenshot03.jpg" alt="">
+        <img class="screenshot" src="screenshot.jpg" alt="">
+        <img class="screenshot" src="screenshot01.jpg" alt="">
+        <img class="screenshot" src="screenshot02.jpg" alt="">
+        <img class="screenshot" src="screenshot03.jpg" alt="">
       </section>
 
 
