TeamSticks is back online

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
           <p><a href="https://github.com/T-NAVe/Teamsticks-backend" target="_blank" rel="noopener noreferrer">Teamsticks Backend 🐱‍💻</a></p>
           <p><a href="https://github.com/T-NAVe/Teamsticks-Viewer" target="_blank" rel="noopener noreferrer">Teamsticks Viewer 🐱‍🐉</a></p>
           <p><a href="https://github.com/T-NAVe/Teamsticks-Client" target="_blank" rel="noopener noreferrer">Teamsticks Client 🐱‍👤</a></p>
-          This is an ElectronJS desktop application and it's currently not working since League of Legends has recently changed their client's API and the endpoint this app uses is deprecated<br>
-          I've to wait for the new version to arrive in order to make the app work again <br>
+          This is an ElectronJS desktop application, Riot Games changed their Client-API a few months back and it's just back online, i've made the necessary changes for this app to work again.<br>
+          Unfortunately it is hard for you to test it, since you will need to set up the project to your needs.<br>
           But hey, here are some screenshots!
         </p>
         <img class="screenshot" src="screenshot.jpg" alt="">
