Fixed comment not being a comment

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Luca de Acha</title>
   </head>
   <body id="body" class="body">
-    // preload of doomimages
+    <!-- preload of doomimages -->
     <img src="/Doom01.png" alt="" style="display: none" />
     <img src="/Doom02.png" alt="" style="display: none" />
     <img src="/Doom03.png" alt="" style="display: none" />
