Updated SAL extension being live on chrome store, fixed grammar error

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
       <blockquote>
-        <p>I like making stuff that is outside of my skill set until they become part of my skill set</p>
+        <p>I like making stuff that is outside of my skill set until it becomes part of my skill set</p>
       </blockquote>
 
       <section>
@@ -142,12 +142,12 @@
             A Chrome Extension to solve a very common problem
           </p>
           <a href="https://github.com/T-NAVe/SAL" target="_blank" rel="noopener noreferrer"><p>The GitHub repository</p></a>
+          <a href="https://chromewebstore.google.com/detail/sal/hepgfnibgmknejeonjihiedmciicopie" target="_blank" rel="noopener noreferrer"><p>Link to extension</p></a>
           <p>
             SAL is a Chrome extension that utilizes a compressor to reduce the dynamic range of audio, providing a smoother experience by leveling the volume across various web videos, from Netflix to YouTube.
             This eliminates the need for users to manually adjust the volume for a more consistent and enjoyable viewing experience.
           </p>
           <p>
-            Is currently in revision by the google team, I will provide a link once it's approved, for now you can download it from the repository, and install it manually.
             I hope you enjoy it!
           </p>
           <hr/>
