update work history

--- a/index.html
+++ b/index.html
@@ -59,12 +59,64 @@
         <article>
           <div class="job-title-box">
             <span class="flex-row">
-              <a href="https://www.linkedin.com/company/culturait/mycompany/" target="_blank" rel="noopener noreferrer">
+              <a href="https://www.linkedin.com/company/totalcoin/" target="_blank" rel="noopener noreferrer">
+                <img style="width: 30; height: 30;" width="30" height="30" class="icon" src="./totalcoin_logo.png">
+              </a>
+              <h3>React developer Ssr</h3>
+            </span>
+            <p>Feb 2024 - Present</p>
+          </div>
+          <p>
+            Maintaining and developing several React & React Native projects.
+          </p>
+          <h3>Responsabilities</h3>
+          <ul>
+              <li>Code Review: Ensure code quality, efficiency, and best practice adherence through thorough reviews.</li>
+              <li>Analysis and Solution Modeling: Conduct in-depth analysis and contribute to scalable solution modeling for complex requirements.</li>
+              <li>Legacy System Maintenance & Migration: Support and enhance existing systems while planning and executing smooth transitions to modern technologies.</li>
+              <li>Stack Analysis and Definitions: Assess and define technology stacks for efficient project development.</li>
+              <li>UI Component Development – Create and maintain reusable UI component libraries to ensure design consistency and accelerate delivery.</li>
+            </ul>
+          <h3>Technologies</h3>
+          <div class="pill-box">
+<!-- React | React Native | Redux | Zustand | tailwind | Shadcn-UI | @tanstack/router | @tanstack/query | componen -->
+            <p class="pill">
+              React
+            </p>
+            <p class="pill">
+              React Native
+            </p>
+            <p class="pill">
+              Redux
+            </p>
+            <p class="pill">
+              Zustand
+            </p>
+            <p class="pill">
+              tailwindcss
+            </p>
+            <p class="pill">
+              Shadcn-UI
+            </p>
+            <p class="pill">
+              @tanstack/router
+            </p>
+            <p class="pill">
+              @tanstack/query
+            </p>
+          </div>
+          <hr/>
+        </article>
+
+        <article>
+          <div class="job-title-box">
+            <span class="flex-row">
+              <a href="https://www.linkedin.com/company/culturait/" target="_blank" rel="noopener noreferrer">
                 <img style="width: 30; height: 30;" width="30" height="30" class="icon" src="./culturait_logo.jpg">
               </a>
               <h3>React developer Ssr | Dev lead</h3>
             </span>
-            <p>May 2022 - Present</p>
+            <p>May 2022 - Jan 2024</p>
           </div>
           <p>
             Leading small groups of developers, working on a NextJs application.
